deployment/main/gv-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gv-front
  labels:
    app: gv-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gv-front
  template:
    metadata:
      labels:
        app: gv-front
    spec:
      containers:
      - name: gv-front
        image: mateduard/k8s-cluster-front:1.5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 20
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 18
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: "200Mi"      # Minimum memory guaranteed to the container
            cpu: "100m"          # Minimum CPU guaranteed (350 millicores, or 0.35 CPU)
          limits:
            memory: "250Mi"        # Maximum memory the container can use
            cpu: "150m"
